src/frontend/src/components/Analytics.css
/*Analytics Page CSS*/
#analytics-title {
  text-align: center;
  font-size: 40px;
  color:green;
}

.points {
  font-size: 24px;
}

.analytics_card {
	justify-content:space-evenly;
	padding: 15px;
	margin: 10px;
  border-radius: 15px;
	display:flex;
  gap: 30px;
  background: #ececec;
  align-items: center;
}

.chart-overlay {
  background-color: green;
  color:white;
}

.chart-no-overlay {
  background-color: lightgrey;
  color:black;
  padding: 20px;
  background-color: #f5f5f5;
}

.line_graph_options {
  display:inline;
}

.month-line-graph-header {
  display:inline-flex;
}

